[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Grigory Yurginis <g.urginis@anviovr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.40"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
